fixed filter background color issue on firefox

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -28,6 +28,7 @@ header {
 	padding: 2px 5px;
 	border: none;
 	position: relative;
+	background-color: #ffffff;
 	.fa-solid {
 		position: absolute;
 		left: 8px;
